--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -25,7 +25,7 @@
 \title{???A quantitative framework for investigating the reliability of network construction}
 
 
-\author{Dominique Gravel, D. Carstensen, Timoth\'{e}e Poisot, Daniel B. Stouffer, \& Alyssa R. Cirtwill$^{1}$, others??}
+\author{Dominique Gravel, \& Alyssa R. Cirtwill$^{1}$, Anna Ekl\"{o}f, Tomas Roslin, Kate Wootton}
 \date{\small$^1$Department of Physics, Chemistry\\ 
 and Biology (IFM)\\ 
 Link\"{o}ping University\\
@@ -359,6 +359,9 @@ These trials yield a surprising result: it requires \textgreater30 [[or 23??]] o
       sigma2=num/den
 
 
+      [[Checking this for reasonableness: sum is about 30, so we should have 30 galler-genotype combinations?]]
+
+
       Using this degree distribution we can obtain prior values for $\alpha$ and $\beta$ using the code above. We obtain
       $\alpha$=2.175656, $\beta$=5.361083.
 
@@ -374,8 +377,8 @@ These trials yield a surprising result: it requires \textgreater30 [[or 23??]] o
       Realistic values for n when k=0, based on a sample of 20 random sites:
       n=1: 0.25485794 0.02224566
       n=2: 0.22813413 0.01846427
-      n=3:
-      n=4:
+      n=3: 0.20648283 0.01555013
+      n=4: 0.18858498 0.01326377
 
 
 
@@ -387,6 +390,9 @@ These trials yield a surprising result: it requires \textgreater30 [[or 23??]] o
   \subsection*{Computing the confidence interval around a probability estimate}
 
     \subsection*{How many samples are required to reach a minimal precision}
+
+
+  [[What if we have only one site? Can we use the number of observations of a pair of species interacting with any partners as the number of times they co-occur, and the number of interactions within the pair as k? This will be sort-of valid for insects but not for plants when researchers camp out by plant individuals... ]]
 
 
 \clearpage
